--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,8 @@
 </div>
 <div style='margin:0px 30px 30px 30px'>
 <h2 style='text-align:left;color:#7FFFD4;'>Introduce</h2>
-<p style='text-indent: 2em'>The httpd.py project is a simple and light web server that was built by python. The initial writting purpose is my curiosity about the work flow of web server. That means I want to figure out the web server architecture. To finish it,I have referenced another C language open source project - <a style = "text-decoration: none;" href = "https://github.com/EZLippi/Tinyhttpd">tinyhttpd</a>.</p>
-<p style='text-indent: 2em'>The first goal of this project is built by minimal code line.If you want to learn operating priciple of a static web server and are unwilling to cost lots of time, this project will be your optimal option. You just need to take a few hours to read source code,then you will have more understanding on static web server or http protocol.</p>
+<p style='text-indent: 2em'>The httpd.py project is a simple and light web server that was built by python. The initial writting purpose is my curiosity about the work flow of web server. That means I want to figure out the web server architecture. In order to finish it,I have referenced another C language open source project - <a style = "text-decoration: none;" href = "https://github.com/EZLippi/Tinyhttpd">tinyhttpd</a>.</p>
+<p style='text-indent: 2em'>The first goal of this project is built by minimal code line.If you want to learn operating principle of a static web server and are unwilling to spend lots of time, this project will be your optimal option. You just need to take a few hours to read source code,then you will have more understanding on static web server or http protocol.</p>
 </div>
 </div>
 </body>
